Add JSON Response to index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,8 @@
             <h3>Book Name: {{book_name}}</h3>
             <h3>Author: {{book_author}}</h3>
             <h3>Page Number: {{page_number}}</h3>
-            <h3>Publish_Date: {{publish_date}}</h3>
+            <h3>Publish Date: {{publish_date}}</h3>
+            <a href="books/{{rowid}}" class="button">Get JSON Response</a>
           </div>
           <hr>
         </div>
