--- a/views/books.hbs
+++ b/views/books.hbs
@@ -26,6 +26,8 @@
           <h3>Page Number: {{page_number}}</h3>
           <h3>Publish Date: {{publish_date}}</h3>
           <a href="books/{{rowid}}" class="button">Get JSON Response</a>
+          <br>
+          <a href="books/{{rowid}}" class="button">Delete Book</a>
         </div>
         <hr>
       </div>
